<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/cropImage"

                    android:contentDescription="@string/crop_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginStart="12dp"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/cropImage"
                    android:text="Crop Name"
                    android:id="@+id/cropName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:textAllCaps="false"
                    android:padding="8dp"
                    android:background="@color/colorPrimary"
                    android:layout_centerInParent="true"
                    android:layout_alignParentEnd="true"
                    android:text="Choose Crop"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <EditText
                android:maxLength="4"
                android:inputType="numberDecimal"
                android:autofillHints="@string/ph_value"
                android:layout_marginBottom="8dp"
                android:id="@+id/phValue"
                android:hint="@string/ph_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:text="@string/nitrogen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <RadioGroup
                    android:checkedButton="@+id/highNitrogen"
                    android:id="@+id/nitrogenRadioG"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/highNitrogen"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/high"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/mediumNitrogen"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/moderate"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/lowNitrogen"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/low"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RadioGroup>


            </LinearLayout>


            <LinearLayout
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:text="@string/phosphorous"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <RadioGroup
                    android:checkedButton="@+id/highPhosphorous"
                    android:id="@+id/phosphorousRadioG"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/highPhosphorous"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/high"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/mediumPhosphorous"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/moderate"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/lowPhosphorous"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/low"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:text="@string/potassium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <RadioGroup
                    android:checkedButton="@+id/highPotassium"
                    android:id="@+id/potassiumRadioG"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/highPotassium"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/high"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/mediumPotassium"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/moderate"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/lowPotassium"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/low"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:text="@string/organic_matters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <RadioGroup
                    android:checkedButton="@+id/highOM"
                    android:id="@+id/omRadioG"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/highOM"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/high"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/mediumOM"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/moderate"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/lowOM"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/low"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView

                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:text="@string/soil_texture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <RadioGroup
                    android:checkedButton="@+id/loam"
                    android:id="@+id/soilTextureRadioG"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton

                        android:id="@+id/loam"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/loam"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/sandyLoam"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/sandy_loam"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/clayLoam"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/clay_loam"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView

                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:text="@string/region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <RadioGroup
                    android:checkedButton="@+id/hill"
                    android:id="@+id/regionRadioG"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton

                        android:id="@+id/hill"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/hill"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <!--<RadioButton
                        android:id="@+id/midHill"
                        android:buttonTint="@color/cpb_green"
                        android:textSize="16sp"
                        android:text="MidHill"
                        android:textColor="@color/black_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>-->

                    <RadioButton
                        android:id="@+id/terai"
                        android:buttonTint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:text="@string/terai"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RadioGroup>

            </LinearLayout>

            <Button
                android:textSize="20sp"
                android:textAllCaps="false"
                android:id="@+id/btnCalculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp"
                android:background="@color/colorPrimary"
                android:text="@string/calculate_fertilizers"
                android:textColor="@android:color/white" />




        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


  </androidx.coordinatorlayout.widget.CoordinatorLayout>