<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FertilizerActivity">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.cardview.widget.CardView
                    android:backgroundTint="@color/urea_color"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:textColor="@android:color/white"
                            android:padding="4dp"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:text="@string/urea"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:textStyle="bold"
                            android:id="@+id/ureaAmount"
                            android:layout_centerInParent="true"
                            android:textSize="@dimen/card_center_text"
                            android:textColor="@android:color/white"
                            android:gravity="center"
                            android:text="@string/dash"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:padding="4dp"
                            android:textSize="18sp"
                            android:textColor="@android:color/white"
                            android:gravity="center"
                            android:text="@string/kg_per_ropani"
                            android:layout_alignParentBottom="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>



                    </RelativeLayout>



                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:backgroundTint="@color/dap_color"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:padding="4dp"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:textColor="@android:color/white"
                            android:text="@string/dap"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:textStyle="bold"
                            android:id="@+id/dapAmount"
                            android:layout_centerInParent="true"
                            android:textSize="@dimen/card_center_text"
                            android:textColor="@android:color/white"
                            android:gravity="center"
                            android:text="@string/dash"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:padding="4dp"
                            android:textSize="18sp"
                            android:textColor="@android:color/white"
                            android:gravity="center"
                            android:text="@string/kg_per_ropani"
                            android:layout_alignParentBottom="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>



                    </RelativeLayout>



                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:weightSum="1"
                android:id="@+id/llAddFarmer"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.cardview.widget.CardView
                    android:backgroundTint="@color/mop_color"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:textColor="@android:color/white"
                            android:padding="4dp"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:text="@string/mop"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:textStyle="bold"
                            android:id="@+id/mopAmount"
                            android:layout_centerInParent="true"
                            android:textSize="@dimen/card_center_text"
                            android:textColor="@android:color/white"
                            android:gravity="center"
                            android:text="@string/dash"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:padding="4dp"
                            android:textSize="18sp"
                            android:textColor="@android:color/white"
                            android:gravity="center"
                            android:text="@string/kg_per_ropani"
                            android:layout_alignParentBottom="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>



                    </RelativeLayout>



                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:backgroundTint="@color/om_color"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="140dp"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:padding="4dp"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:textColor="@android:color/white"
                            android:text="@string/om"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:textStyle="bold"
                            android:id="@+id/omAmount"
                            android:layout_centerInParent="true"
                            android:textSize="@dimen/card_center_text"
                            android:textColor="@android:color/white"
                            android:gravity="center"
                            android:text="@string/dash"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:padding="4dp"
                            android:textSize="18sp"
                            android:textColor="@android:color/white"
                            android:gravity="center"
                            android:text="@string/kg_per_ropani"
                            android:layout_alignParentBottom="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>



                    </RelativeLayout>



                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>



</ScrollView>